--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ h1 {
     font-family: var(--secondary-font);
 }
 
+/* h2{
+    color: var(--result-title-text);
+} */
+
 h3 {
     margin-bottom: 0.875rem;
     line-height: 2.875rem;
@@ -342,6 +346,35 @@ p {
     position: relative;
     z-index: 1; /* Ensure text and images stay above the background */
 }
+
+/* Metadata */
+
+.subtitle1 {
+    color: rgba(49, 40, 40, 0.566);
+}
+
+hr{
+    height: 2px;
+    background-color: var(--result-title-text);
+    border-width:0;
+}
+
+ul{
+    padding: 0;
+}
+
+.list-group li{
+    border: none;
+    padding-bottom: 0px;
+}
+
+.sourceLink {
+    font-weight: bold; 
+    text-decoration: underline;
+}
+
+
+
 
   
 
