--- a/css/style.css
+++ b/css/style.css
@@ -60,15 +60,15 @@ h1 {
     font-family: var(--secondary-font);
 }
 
-/* h2{
-    color: var(--result-title-text);
-} */
+h2{
+    font-size: 2.55rem;
+}
 
 h3 {
-    margin-bottom: 0.875rem;
+    margin-bottom: 0.175rem;
     line-height: 2.875rem;
-    font-weight: 700;
-    font-size: 2.25rem;
+    /* font-weight: 700; */
+    font-size: 1.75rem;
     color: var(--primary-text);
     font-family: var(--secondary-font);
 }
@@ -307,12 +307,12 @@ p {
 }
 
 .card-title{
-    padding-bottom: 10px;
+    padding-bottom: 5px;
 }
 
-/* .card-body img{
-    height: 30px;
-} */
+.card-body p{
+    margin: 0;
+}
 
 .card:hover {
     transform:scale(1.01);
@@ -349,21 +349,28 @@ p {
 
 /* Metadata */
 
+.titleIcon{
+    width: 30px;
+}
+
 .subtitle1 {
     color: rgba(49, 40, 40, 0.566);
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 hr{
     height: 2px;
     background-color: var(--result-title-text);
     border-width:0;
+    margin-top:0;
 }
 
 ul{
     padding: 0;
 }
 
-.list-group li{
+.list-group-item{
     border: none;
     padding-bottom: 0px;
 }
