update MLSea link

--- a/views/algorithmInfo.html
+++ b/views/algorithmInfo.html
@@ -150,7 +150,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center text-lg-center">
                     <p>Developed by Ioannis Dasoulas, DTAI Lab, KU Leuven</p>
-                    <p>Find out more about <a href="https://www.w3id.org/mlsea" target=”_blank”> MLSea</a> </p>
+                    <p>Find out more about <a href="https://dtai-kg.github.io/MLSea-KGC/" target=”_blank”> MLSea</a> </p>
                     <a href="https://www.flaticon.com/free-icons/server" title="server icons">Server icons created by phatplus - Flaticon</a>
                 </div>
             </div>
